@@ -5,6 +5,7 @@ import java.io.File;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.net.URL;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Scanner;
 
@@ -16,37 +17,46 @@ public class ClientUtils {
 	
     public static void launchClient(final List<MinecraftLibrary> libs) {
         try {
-        	Soar.instance.setInfo("Launching...");
-            String launchCMD = "";
+			Soar.instance.info = EnumInfo.LAUNCHING;
+            final List<String> launchCMD = new ArrayList<>();
             Soar.instance.logger.info("Launching Client...");
             
             switch (OSType.getType()) {
 	            case WINDOWS:{
 	                Soar.instance.logger.info("Set Windows Java!");
-	                launchCMD = new File(FileUtils.launcherDir + File.separator + "java" + File.separator + "bin" + File.separator + "java").getPath();
+	                launchCMD.add(new File(FileUtils.launcherDir + "/java/bin/java").getPath());
 	                break;
 	            }
 	            default:{
 	                Soar.instance.logger.info("Set OtherOS Java!");
-	                launchCMD = "java";
+	                launchCMD.add(System.getProperty("java.home", "/usr") + "/bin/java");
 	                break;
 	            }
             }
             
-            launchCMD = launchCMD + " -Djava.library.path=\"" + FileUtils.nativesFolder.getAbsolutePath() + "\" -cp \"";
+            launchCMD.add("-Djava.library.path=" + FileUtils.nativesFolder.getAbsolutePath());
+
+            final List<String> classpath = new ArrayList<>();
             
             for (final MinecraftLibrary lib : libs) {
                 final File libFile = new File(FileUtils.librariesFolder, lib.getPath());
-                launchCMD += libFile.getAbsolutePath();
-                launchCMD += File.pathSeparator;
+                classpath.add(libFile.getAbsolutePath());
             }
             
-            launchCMD = launchCMD + FileUtils.clientFolder.getAbsolutePath() + File.separator + "*\" ";
-            launchCMD += "net.minecraft.client.main.Main ";
-            launchCMD += "--accessToken " + Soar.instance.getToken() + " ";
-            launchCMD += "--version SoarClient ";
-            launchCMD += "--username " + Soar.instance.getUsername() + " ";
-            launchCMD += "--uuid " + Soar.instance.getId() + " ";
+            classpath.add(FileUtils.clientFolder.getAbsolutePath() + "/*");
+
+            launchCMD.add("-cp");
+            launchCMD.add(String.join(File.pathSeparator, classpath));
+            launchCMD.add("net.minecraft.client.main.Main");
+            launchCMD.add("--accessToken");
+            launchCMD.add(Soar.instance.getToken());
+            launchCMD.add("--version");
+            launchCMD.add("SoarClient");
+            launchCMD.add("--username");
+            launchCMD.add(Soar.instance.getUsername());
+            launchCMD.add("--uuid");
+            launchCMD.add(Soar.instance.getId());
+            
             String launchDirAfterUserFolder = null;
             switch (OSType.getType()) {
                 case WINDOWS: {
@@ -56,22 +66,28 @@ public class ClientUtils {
                 }
                 case MAC: {
 	                Soar.instance.logger.info("Set MAC Location!");
-                    launchDirAfterUserFolder = "Library\\Application Support\\.minecraft\\";
+                    launchDirAfterUserFolder = "Library/Application Support/.minecraft";
                     break;
                 }
                 default: {
 	                Soar.instance.logger.info("Set Other Location!");
-                    launchDirAfterUserFolder = "\\.minecraft\\";
+                    launchDirAfterUserFolder = ".minecraft";
                     break;
                 }
             }
             
             final File launchF = new File(FileUtils.userDir, launchDirAfterUserFolder);
             final File assetsF = new File(launchF, "assets");
-            launchCMD = launchCMD + "--gameDir \"" + launchF.getAbsolutePath() + "\" ";
-            launchCMD = launchCMD + "--assetsDir \"" + assetsF.getAbsolutePath() + "\" ";
-            launchCMD += "--assetIndex 1.8 ";
-            final Process proc = Runtime.getRuntime().exec(launchCMD);
+
+            launchCMD.add("--gameDir");
+            launchCMD.add(launchF.getAbsolutePath());
+            launchCMD.add("--assetsDir");
+            launchCMD.add(assetsF.getAbsolutePath());
+            launchCMD.add("-assetIndex");
+            launchCMD.add("1.8");
+            
+            final Process proc = new ProcessBuilder(launchCMD).start();
+            
             final BufferedReader reader = new BufferedReader(new InputStreamReader(proc.getInputStream()));
             String isLine;
             while ((isLine = reader.readLine()) != null) {
@@ -84,7 +100,7 @@ public class ClientUtils {
             }
             
             if (!proc.isAlive()) {
-                Soar.instance.setInfo("Launch");
+				Soar.instance.info = EnumInfo.LAUNCH;
             }
         }
         catch (IOException e) {
@@ -94,7 +110,7 @@ public class ClientUtils {
     
     public static void downloadNatives(final List<MinecraftNativeLibrary> nativeLibraries) {
         if (FileUtils.nativesFolder.listFiles().length == 0) {
-    		Soar.instance.setInfo("Downloading...");
+			Soar.instance.info = EnumInfo.DOWNLOADING;
             Soar.instance.logger.info("Downloading Natives...");
             for (final MinecraftNativeLibrary library : nativeLibraries) {
                 final OSType osType = OSType.getType();
@@ -140,7 +156,7 @@ public class ClientUtils {
     
     public static void downloadLibraries(final List<MinecraftLibrary> libraries) {
         for (final MinecraftLibrary library : libraries) {
-            Soar.instance.setInfo("Downloading...");
+			Soar.instance.info = EnumInfo.DOWNLOADING;
             Soar.instance.logger.info("Downloading Client Library: " + library.getName());
             if (!new File(FileUtils.librariesFolder, library.getPath()).getParentFile().exists()) {
                 new File(FileUtils.librariesFolder, library.getPath()).getParentFile().mkdirs();
@@ -155,7 +171,7 @@ public class ClientUtils {
     
     public static void downloadJava() {
     	if(!FileUtils.javaFolder.exists()) {
-    		Soar.instance.setInfo("Downloading...");
+			Soar.instance.info = EnumInfo.DOWNLOADING;
         	Soar.instance.logger.info("Downloading Java...");
     		FileUtils.javaFolder.mkdir();
     		FileUtils.downloadFile("https://github.com/EldoDebug/Soar-Launcher/releases/download/SoarClient-Files/java.zip", new File(FileUtils.launcherDir, "java.zip"));
@@ -167,7 +183,7 @@ public class ClientUtils {
     public static void downloadClient() {
     	Soar.instance.logger.info("Downloading Client Files...");
     	if(!(new File(FileUtils.clientFolder, "SoarClient.jar").exists()) || !(new File(FileUtils.clientFolder, "SoarClient.json").exists()) || ClientUtils.checkUpdate()) {
-    		Soar.instance.setInfo("Downloading...");
+			Soar.instance.info = EnumInfo.DOWNLOADING;
     		Soar.instance.logger.info("Downloading SoarClient.jar");
     		FileUtils.downloadFile("https://github.com/EldoDebug/Soar-Launcher/releases/download/SoarClient-Files/SoarClient.jar", new File(FileUtils.clientFolder, "SoarClient.jar"));
     		Soar.instance.logger.info("Downloading SoarClient.json");
